# azmq

./: .gitignore  AUTHORS  AzmqCPack.cmake  CMakeLists.txt  FindAzmqLibzmq.cmake  README.md  azmqConfig.cmake
.github/workflows/: cmake.yml
.github/workflows/cmake-superbuild/: CMakeLists.txt
azmq/: actor.hpp  context.hpp  error.hpp  message.hpp  socket.hpp
azmq/detail/: actor_service.hpp  basic_io_object.hpp  reactor_op.hpp  receive_op.hpp  send_op.hpp  service_base.hpp  socket_ext.hpp  socket_ops.hpp  socket_service.hpp
doc/examples/actor/: main.cpp
test/actor/: main.cpp
test/cpp20/socket/: CMakeLists.txt  main.cpp
test/message/: CMakeLists.txt
test/signal/: main.cpp
test/socket/: main.cpp
